; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_shell.c_InstallGlobalKeyboardHook.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_shell.c_InstallGlobalKeyboardHook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OldGlobalInt31Handler = common dso_local global i64 0, align 8
@KeyboardIRQL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InstallGlobalKeyboardHook() #0 {
  %1 = alloca i64, align 8
  %2 = call i32 (...) @ENTER_FUNC()
  %3 = call i32 (...) @MaskIrqs()
  %4 = load i64, i64* @OldGlobalInt31Handler, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %11, label %6

6:                                                ; preds = %0
  %7 = call i64 asm "mov $$NewGlobalInt31Handler,$0", "=r,~{eax},~{dirflag},~{fpsr},~{flags}"() #2, !srcloc !2
  store i64 %7, i64* %1, align 8
  %8 = load i32, i32* @KeyboardIRQL, align 4
  %9 = load i64, i64* %1, align 8
  %10 = call i64 @SetGlobalInt(i32 %8, i64 %9)
  store i64 %10, i64* @OldGlobalInt31Handler, align 8
  br label %11

11:                                               ; preds = %6, %0
  %12 = call i32 (...) @UnmaskIrqs()
  %13 = call i32 (...) @LEAVE_FUNC()
  ret void
}

declare dso_local i32 @ENTER_FUNC(...) #1

declare dso_local i32 @MaskIrqs(...) #1

declare dso_local i64 @SetGlobalInt(i32, i64) #1

declare dso_local i32 @UnmaskIrqs(...) #1

declare dso_local i32 @LEAVE_FUNC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 497}
